# debth

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  fs_tree.rs  ignore.rs  main.rs  review.rs
