[package]
name = "debth"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A TUI for tracking reviewed, rejected, and unreviewed code in vibe-coded projects."

[dependencies]
anyhow = "1"
crossterm = "0.28"
hex = "0.4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
